--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -2,7 +2,8 @@
 
 <% @tickets.each do |ticket| %>
   <h2><%= ticket.subject %></h2>
-  <h3>Created by: <%= ticket.creator&.name %><>
-  <h3>Assigned to: <%= ticket.owner&.name %></h3>
+  <h3>Created by: <%= ticket.creator&.name || Ticket::EMPTY_CREATOR %>
+  <h3>Assigned to: <%= ticket.owner&.name || Ticket::EMPTY_OWNER %></h3>
+  <h4>Status: <%= ticket.status %>
   <p><%= ticket.body %></p>
 <% end %>
