added react component

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -7,3 +7,6 @@
   <h4>Status: <%= ticket.status %>
   <p><%= ticket.body %></p>
 <% end %>
+
+<div id="root"></div>
+<%= javascript_pack_tag 'hello_react' %>
