--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,10 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= javascript_pack_tag 'application' %>
   </head>
 
   <body>
     <%= yield %>
-    <div id="root"></div>  <!-- root element for React -->
   </body>
 </html>
