--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -4,9 +4,8 @@
   <h2><%= ticket.subject %></h2>
   <h3>Created by: <%= ticket.creator&.name || Ticket::EMPTY_CREATOR %>
   <h3>Assigned to: <%= ticket.owner&.name || Ticket::EMPTY_OWNER %></h3>
-  <h4>Status: <%= ticket.status %>
+  <h4>Status: <%= ticket.status %></h4>
   <p><%= ticket.body %></p>
 <% end %>
 
-<div id="root"></div>
-<%= javascript_pack_tag 'hello_react' %>
+<%= react_component("HelloWorld", @greeting) %>
