WIP: added Ticket react component for rendering a ticket

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -8,4 +8,4 @@
   <p><%= ticket.body %></p>
 <% end %>
 
-<%= react_component("HelloWorld", @greeting) %>
+<%= react_component("TicketsPage", { tickets: @tickets }) %>
